--- a/DataFetchingApp/TableViewCell.xib
+++ b/DataFetchingApp/TableViewCell.xib
@@ -12,57 +12,46 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="200" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="DataFetchingApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="621" height="200"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="165" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="DataFetchingApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="513" height="165"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="621" height="199.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="513" height="164.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gRs-96-kJU">
-                        <rect key="frame" x="20" y="20" width="110" height="159.5"/>
+                        <rect key="frame" x="20" y="20" width="110" height="110"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="110" id="VYq-ML-JRx"/>
+                            <constraint firstAttribute="height" constant="110" id="0ee-RK-l3X"/>
+                            <constraint firstAttribute="width" constant="110" id="XDv-Pf-1QB"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="aEh-id-QOx"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6cm-ao-Ph6">
-                        <rect key="frame" x="323" y="34" width="219" height="41"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="219" id="BSa-BX-vjf"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJa-rc-YVH">
-                        <rect key="frame" x="323" y="110" width="170" height="34"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="170" id="4bf-uU-BwP"/>
-                            <constraint firstAttribute="height" constant="34" id="JgV-Cj-aVY"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6cm-ao-Ph6">
+                        <rect key="frame" x="151" y="20" width="354" height="118"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="6cm-ao-Ph6" firstAttribute="leading" secondItem="MJa-rc-YVH" secondAttribute="leading" id="0Ha-Os-VJk"/>
-                    <constraint firstItem="gRs-96-kJU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="9" id="82U-qU-y44"/>
-                    <constraint firstItem="6cm-ao-Ph6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="23" id="CA0-QG-YaJ"/>
-                    <constraint firstItem="gRs-96-kJU" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="CN7-hE-tP5"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="6cm-ao-Ph6" secondAttribute="trailing" constant="59" id="Pqt-Ea-eI3"/>
-                    <constraint firstItem="gRs-96-kJU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="PvD-WA-PMe"/>
-                    <constraint firstItem="MJa-rc-YVH" firstAttribute="top" secondItem="6cm-ao-Ph6" secondAttribute="bottom" constant="35" id="TiU-n7-bUb"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="MJa-rc-YVH" secondAttribute="bottom" constant="45" id="r2s-yg-vYl"/>
+                    <constraint firstAttribute="trailing" secondItem="6cm-ao-Ph6" secondAttribute="trailing" constant="8" id="2fi-BJ-8qg"/>
+                    <constraint firstAttribute="bottom" secondItem="6cm-ao-Ph6" secondAttribute="bottom" constant="26.5" id="33Y-Hr-8Sv"/>
+                    <constraint firstItem="6cm-ao-Ph6" firstAttribute="leading" secondItem="gRs-96-kJU" secondAttribute="trailing" constant="21" id="MnQ-SN-meh"/>
+                    <constraint firstItem="6cm-ao-Ph6" firstAttribute="leading" secondItem="gRs-96-kJU" secondAttribute="trailing" constant="21" id="N97-oo-kcJ"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="gRs-96-kJU" secondAttribute="bottom" constant="24" id="YqM-t3-379"/>
+                    <constraint firstItem="gRs-96-kJU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="mX6-8B-nqj"/>
+                    <constraint firstItem="gRs-96-kJU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="9" id="owA-Lz-79s"/>
+                    <constraint firstItem="6cm-ao-Ph6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="tEK-sG-ofO"/>
+                    <constraint firstItem="gRs-96-kJU" firstAttribute="centerY" secondItem="6cm-ao-Ph6" secondAttribute="centerY" constant="-4" id="wJa-l3-TzQ"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="idLabel" destination="MJa-rc-YVH" id="HD4-xq-rtp"/>
                 <outlet property="tableImage" destination="gRs-96-kJU" id="oXl-wC-C6q"/>
                 <outlet property="title" destination="6cm-ao-Ph6" id="Ayd-qZ-8oW"/>
             </connections>
-            <point key="canvasLocation" x="287.19999999999999" y="175.41229385307346"/>
+            <point key="canvasLocation" x="202.40000000000001" y="122.78860569715144"/>
         </tableViewCell>
     </objects>
 </document>
