--- a/DataFetchingApp/Base.lproj/Main.storyboard
+++ b/DataFetchingApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RrW-UX-VJK">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2AX-VC-8qO">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="rik-4L-1GQ">
@@ -42,6 +42,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="aRt-Ux-LVg"/>
                     <connections>
                         <outlet property="myView" destination="2AX-VC-8qO" id="oij-iY-rjC"/>
                         <segue destination="MOD-Tj-HkV" kind="show" identifier="segue" id="MaP-ZA-jph"/>
@@ -49,6 +50,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1608.8" y="56.221889055472268"/>
         </scene>
         <!--Description View-->
         <scene sceneID="FzE-SP-bcY">
@@ -58,22 +60,117 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6gg-nJ-JHu">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6gg-nJ-JHu">
                                 <rect key="frame" x="46" y="601" width="34" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="mHT-h9-QfP"/>
+                                    <segue destination="RrW-UX-VJK" kind="show" id="mHT-h9-QfP"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L7I-gb-QI2">
+                                <rect key="frame" x="67.5" y="98" width="240" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="JaW-yH-vRQ"/>
+                                    <constraint firstAttribute="height" constant="240" id="l4K-GM-CKs"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Album ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8tu-rO-DxB">
+                                <rect key="frame" x="46" y="392" width="75" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Hh-fL-Wgf">
+                                <rect key="frame" x="46" y="453" width="18" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="18" id="Bhy-J0-P1h"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LK4-oG-Ofr">
+                                <rect key="frame" x="151" y="453" width="96" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="AgA-uA-70d"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IXV-gG-Nja">
+                                <rect key="frame" x="46" y="524" width="37" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VNz-FY-vyB">
+                                <rect key="frame" x="151" y="523" width="193" height="50"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c9W-jN-7Og">
+                                <rect key="frame" x="151" y="392" width="96" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="3Hh-fL-Wgf" firstAttribute="top" secondItem="8tu-rO-DxB" secondAttribute="bottom" constant="40" id="2wT-n6-B6r"/>
+                            <constraint firstItem="LK4-oG-Ofr" firstAttribute="top" secondItem="c9W-jN-7Og" secondAttribute="bottom" constant="26" id="AnS-kt-mw8"/>
+                            <constraint firstItem="IXV-gG-Nja" firstAttribute="top" secondItem="3Hh-fL-Wgf" secondAttribute="bottom" constant="50" id="DDc-0P-v2A"/>
+                            <constraint firstItem="uRr-qh-GIh" firstAttribute="bottom" secondItem="6gg-nJ-JHu" secondAttribute="bottom" constant="36" id="Goz-kD-2jt"/>
+                            <constraint firstItem="3Hh-fL-Wgf" firstAttribute="firstBaseline" secondItem="LK4-oG-Ofr" secondAttribute="firstBaseline" id="I7O-jI-I8T"/>
+                            <constraint firstItem="VNz-FY-vyB" firstAttribute="top" secondItem="LK4-oG-Ofr" secondAttribute="bottom" constant="32" id="KqY-Xx-RNv"/>
+                            <constraint firstItem="uRr-qh-GIh" firstAttribute="bottom" secondItem="VNz-FY-vyB" secondAttribute="bottom" constant="94" id="Mex-Ed-s1s"/>
+                            <constraint firstItem="L7I-gb-QI2" firstAttribute="centerX" secondItem="DjF-pe-5aH" secondAttribute="centerX" id="SOE-1s-z7g"/>
+                            <constraint firstItem="c9W-jN-7Og" firstAttribute="trailing" secondItem="LK4-oG-Ofr" secondAttribute="trailing" id="ZhQ-jG-cam"/>
+                            <constraint firstItem="uRr-qh-GIh" firstAttribute="trailing" secondItem="c9W-jN-7Og" secondAttribute="trailing" constant="128" id="bCR-Fl-G2e"/>
+                            <constraint firstItem="8tu-rO-DxB" firstAttribute="leading" secondItem="uRr-qh-GIh" secondAttribute="leading" constant="46" id="fog-X9-Wke"/>
+                            <constraint firstItem="3Hh-fL-Wgf" firstAttribute="leading" secondItem="IXV-gG-Nja" secondAttribute="leading" id="lka-LB-rW1"/>
+                            <constraint firstItem="LK4-oG-Ofr" firstAttribute="leading" secondItem="VNz-FY-vyB" secondAttribute="leading" id="pHG-tu-eIA"/>
+                            <constraint firstItem="IXV-gG-Nja" firstAttribute="leading" secondItem="6gg-nJ-JHu" secondAttribute="leading" id="pxn-vB-AJw"/>
+                            <constraint firstItem="8tu-rO-DxB" firstAttribute="firstBaseline" secondItem="c9W-jN-7Og" secondAttribute="firstBaseline" id="qRE-Ur-l2d"/>
+                            <constraint firstItem="c9W-jN-7Og" firstAttribute="leading" secondItem="LK4-oG-Ofr" secondAttribute="leading" id="qZq-GL-FYR"/>
+                            <constraint firstItem="L7I-gb-QI2" firstAttribute="top" secondItem="uRr-qh-GIh" secondAttribute="top" constant="34" id="rY2-yH-dGa"/>
+                            <constraint firstItem="LK4-oG-Ofr" firstAttribute="leading" secondItem="3Hh-fL-Wgf" secondAttribute="trailing" constant="87" id="smT-dB-QnP"/>
+                            <constraint firstItem="uRr-qh-GIh" firstAttribute="trailing" secondItem="VNz-FY-vyB" secondAttribute="trailing" constant="31" id="uQF-cy-jFZ"/>
+                            <constraint firstItem="8tu-rO-DxB" firstAttribute="top" secondItem="L7I-gb-QI2" secondAttribute="bottom" constant="54" id="uVs-13-lBq"/>
+                            <constraint firstItem="8tu-rO-DxB" firstAttribute="leading" secondItem="3Hh-fL-Wgf" secondAttribute="leading" id="v5f-pB-Q4B"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="uRr-qh-GIh"/>
                     </view>
+                    <connections>
+                        <outlet property="albumIdDisp" destination="c9W-jN-7Og" id="uGv-Zf-bpJ"/>
+                        <outlet property="dispcriptionImage" destination="L7I-gb-QI2" id="5oE-C5-Nl1"/>
+                        <outlet property="idDisp" destination="LK4-oG-Ofr" id="62N-uy-Urc"/>
+                        <outlet property="titleDisp" destination="VNz-FY-vyB" id="Wpg-tP-QlU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hkw-nj-76g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1518" y="27"/>
+            <point key="canvasLocation" x="2456.8000000000002" y="26.53673163418291"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="hRb-BU-fbB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RrW-UX-VJK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9Le-To-a19">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="NjG-td-lhs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WVb-5h-wNd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="824.79999999999995" y="-641.82908545727139"/>
         </scene>
     </scenes>
 </document>
